# loading_gltf

./: Cargo.toml
assets/: apina.gltf  apina2.gltf  cube_with_material.gltf  no_material.gltf  with_material.gltf
src/: main.rs
