[package]
name = "three_d_check_loader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou = "0.18.1"
tri-mesh = "0.6.0"
three-d-asset = {version="0.4.0", features=["gltf", "png"]}
plotpy = "0.3.5"

[dependencies.gltf]
version = "1.0"
features = ["extras", "names"]
